tdf#164005: make sure to initialize locales before use of Hyphenator

Change-Id: I23ab742801ab00b68e4f8c5e7bc415c401e28c37
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177076
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins